# help-to-heat-GBIS

./: .gitignore  Makefile  README.md  docker-compose.yml  export.csv  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: main-label-check.yml  portal-checks.yml  trivy.yml
docker/tests/: Dockerfile  check-code.sh  start.sh
docker/web/: Dockerfile  start.sh
envs/: tests  web  web.template
help_to_heat/: auth.py  context_processors.py  jinja2.py  middleware.py  settings.py  urls.py  utils.py  views.py  wsgi.py
help_to_heat/frontdoor/: consts.py  eligibility.py  epc_api.py  interface.py  mock_epc_api.py  mock_os_api.py  models.py  os_api.py  routing.py  schemas.py  urls.py  views.py
help_to_heat/frontdoor/migrations/: 0007_answer_frontdoor_a_session_cfe892_idx.py  0008_auto_20230721_1456.py  0008_auto_20230818_1451.py  0009_accesstoken.py
help_to_heat/frontdoor/mock_epc_api_data/: sample_address_and_lmk_response.json  sample_address_and_rrn_response.json  sample_epc_recommendations_response.json  sample_epc_response.json  sample_epc_response_with_epc_c.json  sample_search_response.json  sample_search_response_with_multiple_epc.json  sample_token_response.json
help_to_heat/frontdoor/mock_os_api_data/: empty_osdatahub_response.json  sample_os_api_postcode_response.json  sample_os_api_uprn_response.json
help_to_heat/frontdoor/routing/: __init__.py  backwards_routing.py  forwards_routing.py
help_to_heat/frontdoor/session_handlers/: duplicate_referral_checker.py
help_to_heat/portal/: authentication_views.py  download_views.py  email_handler.py  models.py  supplier_and_user_management_views.py  urls.py  views.py
help_to_heat/portal/migrations/: 0012_scottishepcrating.py  0013_add_referral_id.py  0013_feedback_feedbackdownload.py  0014_add_extra_fields_to_scottishepc.py  0015_remove_length_limit_from_some_scottishepc_text_fields.py  0016_increase_test_length_limit_on_scottishepc_numeric_fields.py
help_to_heat/templates/: dataLayer.js  digitalassistance.html  macros.html
help_to_heat/templates/frontdoor/: accessibility-statement.html  address-manual.html  address-select.html  address.html  alternative-supplier.html  alternative_supplier.html  application-closed-utility-warehouse.html  applications-closed.html  base.html  benefits.html  bulb-warning-page.html  cannot-continue.html  confirm-and-submit.html  contact-details.html  cookies.html  council-tax-band.html  country.html  custom-not-found.html  digitalassistance.html  epc-disagree.html  epc-ineligible.html  epc-select-manual.html  epc-select.html  epc.html  error.html  feedback-thanks.html  feedback.html  holding-page.html  homepage.html  household-income.html  ineligible.html  loft-access.html  loft-insulation.html  (+27 more)
scripts/scottish-epc-formatter/: README.md  index.js  package.json
static/: digitalAssistance.js  main.css  main.js  portal.js  print.js  robots.txt
static/govuk-frontend/: README.md  govuk-frontend-4.9.0.min.css  govuk-frontend-5.10.2.min.css
static_error_pages/: GBISerrorpage.html  README.md  govuk-frontend-4.9.0.min.css  unavailable.css  unavailable.html
tests/: __init__.py  docker-compose.yml  fixtures.py  test_api.py  test_assets.py  test_basic_auth.py  test_eligibility.py  test_eligibility_scenarios.py  test_frontdoor.py  test_integration.py  test_interface.py  test_registration.py  test_routing.py  utils.py
tests/data/: empty_osdatahub_response.json  sample_os_api_postcode_response.json
tests/eligibility/: test_scenario_01.py  test_scenario_02.py  test_scenario_03.py  test_scenario_04.py  test_scenario_05.py  test_scenario_06.py  test_scenario_07.py  test_scenario_08.py  test_scenario_09.py  test_scenario_10.py  test_scenario_11.py  test_scenario_12.py  test_scenario_13.py  test_scenario_14.py  test_scenario_15.py  test_scenario_16.py  test_scenario_17.py  test_scenario_18.py  test_scenario_19.py  test_scenario_20.py  test_scenario_21.py  test_scenario_22.py  test_scenario_23.py  test_scenario_24.py  test_scenario_25.py  test_scenario_26.py  test_scenario_27.py  test_scenario_28.py  test_scenario_29.py  test_scenario_30.py  test_scenario_31.py  test_scenario_32.py
tests/frontdoor/: test_os_api.py
tests/load_testing/: README.md  help_to_heat_short_journey.jmx
tests/routing/: __init__.py  test_backwards_routing.py  test_forwards_routing.py
utils/: README.md  requirements.txt  update_scottish_epc.py
(+33 files in other folders)
