[tool.poetry]
package-mode = false

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
flake8 = "6.0.0"
flake8-blind-except = "0.2.1"
flake8-isort = "6.0.0"
flake8-print = "5.0.0"
freezegun = "1.2.2"
isort = "5.12.0"
pytest = "7.4.0"
requests-mock = "1.10.0"
testino = "0.3.9"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
django-gov-notify = "0.4.0"
eventlet = "0.35.2"
Faker = "18.10.1"
gunicorn = "21.2.0"
psycogreen = "1.0.2"
waitress = "2.1.2"
watchdog = "3.0.0"

[tool.poetry.dependencies]
python = "~3.11.9"
boto3 = "1.26.86"
botocore = "1.29.86"
debugpy = "1.6.7"
Django = "3.2.19"
django-allauth = "0.54.0"
django-cors-headers = "4.0.0"
django-csp = "3.7"
django-debug-toolbar = "4.1.0"
django-environ = "0.10.0"
django-use-email-as-username = "1.3.0"
djangorestframework = "3.14.0"
furl = "2.1.3"
govuk-frontend-jinja = "2.6.0"
httpx = "0.24.1"
Jinja2 = "3.1.2"
jmespath = "1.0.1"
localstack-client = "1.39"
marshmallow = "3.19.0"
osdatahub = "1.2.5"
psycopg2-binary = "2.9.6"
pyotp = "2.8.0"
python-dateutil = "2.8.2"
s3transfer = "0.6.0"
segno = "1.5.2"
six = "1.16.0"
terraform-local = "0.6"
urllib3 = "1.26.14"
whitenoise = "6.4.0"
XlsxWriter = "3.1.2"
phonenumbers = "^8.13.38"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true