[tool.poetry]
package-mode = false

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
flake8 = "7.2.0"
flake8-blind-except = "0.2.1"
flake8-isort = "6.1.2"
flake8-print = "5.0.0"
freezegun = "1.5.1"
isort = "6.0.1"
pytest = "8.3.5"
requests-mock = "1.12.1"
testino = "0.3.14"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
django-gov-notify = "0.6.0"
eventlet = "0.39.1"
Faker = "37.1.0"
gunicorn = "23.0.0"
psycogreen = "1.0.2"
waitress = "3.0.2"
watchdog = "6.0.0"

[tool.poetry.dependencies]
python = "~3.11.9"
debugpy = "1.8.14"
Django = "5.1.8"
django-allauth = "65.7.0"
django-cors-headers = "4.7.0"
django-csp = "3.8"
django-debug-toolbar = "5.1.0"
django-environ = "0.12.0"
django-use-email-as-username = "1.4.0"
djangorestframework = "3.16.0"
furl = "2.1.4"
govuk-frontend-jinja = "2.8.0"
httpx = "0.28.1"
Jinja2 = "3.1.6"
marshmallow = "3.26.1"
osdatahub = "1.2.11"
psycopg2-binary = "2.9.10"
pyotp = "2.9.0"
python-dateutil = "2.9.0"
segno = "1.6.6"
urllib3 = "1.26.20"
whitenoise = "6.9.0"
XlsxWriter = "3.2.2"
phonenumbers = "^9.0.2"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true